[project]
name = "pyinfrincus"
version = "0.0.3"
description = "A pyinfra connector for incus."
readme = "README.md"
authors = [
    { name = "Alex Wehrli" }
]
requires-python = ">=3.12,<4"
dependencies = [
    "pyinfra>3.5"
]

[build-system]
requires = ["uv_build>=0.9.12,<0.10.0"]
build-backend = "uv_build"
